@@ -17,6 +17,7 @@ package org.jupnp.util;
 import java.net.*;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.BitSet;
 
 /**
@@ -183,20 +184,12 @@ public class URIUtil {
 
     public static String percentEncode(String s) {
         if (s == null) return "";
-        try {
-            return URLEncoder.encode(s, "UTF-8");
-        } catch (Exception ex) {
-            throw new RuntimeException(ex);
-        }
+        return URLEncoder.encode(s, StandardCharsets.UTF_8);
     }
 
     public static String percentDecode(String s) {
         if (s == null) return "";
-        try {
-            return URLDecoder.decode(s, "UTF-8");
-        } catch (Exception ex) {
-            throw new RuntimeException(ex);
-        }
+        return URLDecoder.decode(s, StandardCharsets.UTF_8);
     }
 
     /**
